<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    tools:context="proyects.tello.ehelper.SignActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_bienvenida"/>

    <EditText
        android:layout_marginHorizontal="20dp"
        android:id="@+id/nombre_sign"
        android:hint="@string/nombre"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:layout_marginHorizontal="20dp"
        android:id="@+id/rut_sign"
        android:inputType="number"
        android:hint="@string/rut"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_sign"
        android:layout_gravity="center"
        android:text="@string/continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>